fix header shrink

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "type": "module",
   "devDependencies": {
     "@babel/parser": "^7.17.8",
+    "@types/babel__standalone": "^7.1.4",
+    "@types/estraverse": "^5.1.1",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.6",
     "solid-app-router": "^0.3.2",
@@ -29,17 +31,27 @@
     "node": ">=14"
   },
   "dependencies": {
+    "@babel/standalone": "^7.17.8",
+    "@babel/traverse": "^7.17.3",
     "@codemirror/basic-setup": "^0.19.1",
     "@codemirror/commands": "^0.19.8",
     "@codemirror/lang-javascript": "^0.19.7",
     "@codemirror/state": "^0.19.9",
     "@codemirror/view": "^0.19.47",
     "@iconify/json": "^2.1.20",
+    "@solid-primitives/debounce": "^1.2.0",
+    "@solid-primitives/memo": "^0.0.310",
     "@unocss/core": "^0.30.4",
     "@unocss/preset-uno": "^0.30.4",
+    "acorn": "^8.7.0",
+    "acorn-jsx": "^5.3.2",
+    "acorn-jsx-walk": "^2.0.0",
+    "acorn-walk": "^8.2.0",
     "concurrently": "^7.0.0",
+    "estraverse": "^5.3.0",
     "nanoid": "^3.3.1",
     "random-word-slugs": "^0.1.6",
+    "solid-transition-group": "^0.0.8",
     "sucrase": "^3.20.3",
     "undici": "^4.16.0",
     "unocss": "^0.30.4",
