--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-# VITE_WEBSOCKET_URL=ws://sailwind-server.fly.dev/
-VITE_WEBSOCKET_URL=ws://localhost:8080
+VITE_WEBSOCKET_URL=ws://sailwind-server.fly.dev/
+# VITE_WEBSOCKET_URL=ws://localhost:8080
 # VITE_WEBSOCKET_URL=ws://sailwind.lawrencecchen.repl.co
