--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "HOST=localhost PORT=8080 YPERSISTENCE=./dbDir node ./node_modules/y-websocket/bin/server.js"
+    "start": "node index.js",
+    "start:leveldb": "HOST=localhost PORT=8080 YPERSISTENCE=./dbDir node ./node_modules/y-websocket/bin/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "y-websocket": "^1.4.0"
+    "ws": "^8.5.0",
+    "y-redis": "^1.0.3",
+    "y-websocket": "1.3.6"
   },
   "devDependencies": {
     "yjs": "^13.5.33"
