--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sailwind",
   "version": "0.1.0",
   "description": "A fast multiplayer Tailwind repl built with Solid.",
-  "info": "A very fast Tailwind + React Repl. Inspired by the Vue SFC repl, the Svelte Repl, unocss and motif.land.",
+  "info": "A very fast Tailwind + React Repl.",
   "homepage": "https://sailwind.dev",
   "contributors": [
     {
