--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@iconify/json": "^2.1.20",
     "@solid-primitives/debounce": "^1.2.0",
     "@solid-primitives/memo": "^0.0.310",
+    "@swc/wasm-web": "^1.2.165",
     "@unocss/core": "^0.30.4",
     "@unocss/preset-uno": "^0.30.4",
     "acorn": "^8.7.0",
