--- a/package.json
+++ b/package.json
@@ -58,12 +58,15 @@
     "@codemirror/lang-javascript": "^0.19.7",
     "@codemirror/state": "^0.19.9",
     "@codemirror/view": "^0.19.47",
+    "@floating-ui/core": "^0.6.2",
+    "@floating-ui/dom": "^0.4.5",
     "@iconify/json": "^2.1.28",
     "@solid-primitives/debounce": "^1.3.0",
     "@solid-primitives/event-listener": "^1.6.0",
     "@solid-primitives/memo": "^0.1.0",
     "@swc/wasm-web": "^1.2.165",
     "@unocss/core": "^0.31.5",
+    "@unocss/preset-mini": "^0.31.5",
     "@unocss/preset-uno": "^0.31.5",
     "acorn": "^8.7.0",
     "acorn-jsx": "^5.3.2",
@@ -71,6 +74,7 @@
     "acorn-walk": "^8.2.0",
     "concurrently": "^7.1.0",
     "estraverse": "^5.3.0",
+    "import-remap": "^0.5.0",
     "nanoid": "^3.3.2",
     "random-word-slugs": "^0.1.6",
     "solid-transition-group": "^0.0.10",
